--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 
     <!-- Importa la fuente Roboto desde Google Fonts -->
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700&display=swap" rel="stylesheet">
-
+    <link rel="shortcut icon" href="./assets/favicon.png" type="image/png">
     <style>
 
         /* ------------------ TEMAS ------------------ */
